--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 CarnivorousPlants/CarnivorousPlants/obj/
 CarnivorousPlants/.vs/
 CarnivorousPlants/CarnivorousPlants/bin/
+CarnivorousPlants/CarnivorousPlants/appsettings.Development.json
