Update ApplicationUser model

--- a/CarnivorousPlants/CarnivorousPlants/CarnivorousPlants.csproj
+++ b/CarnivorousPlants/CarnivorousPlants/CarnivorousPlants.csproj
@@ -6,6 +6,15 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Data\Migrations\20190307203522_Migration1.cs" />
+    <Compile Remove="Data\Migrations\20190307203522_Migration1.Designer.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
