--- a/CarnivorousPlants/CarnivorousPlants/CarnivorousPlants.csproj
+++ b/CarnivorousPlants/CarnivorousPlants/CarnivorousPlants.csproj
@@ -45,10 +45,10 @@
     <None Update="Scripts\ScaleAppServicePlan.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Scripts\CreateDevelopSlot.ps1">
+    <None Update="Scripts\CreateSlot.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Scripts\RemoveDevelopSlot.ps1">
+    <None Update="Scripts\RemoveAllSlots.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
