--- a/CarnivorousPlants/CarnivorousPlants/CarnivorousPlants.csproj
+++ b/CarnivorousPlants/CarnivorousPlants/CarnivorousPlants.csproj
@@ -51,6 +51,9 @@
     <None Update="Scripts\RemoveAllSlots.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Scripts\ScaleDatabasePricingTier.ps1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
