--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ CarnivorousPlants/CarnivorousPlants/obj/
 CarnivorousPlants/.vs/
 CarnivorousPlants/CarnivorousPlants/bin/
 CarnivorousPlants/CarnivorousPlants/appsettings.Development.json
+.vscode/
